--- a/src/assets/html/login.html
+++ b/src/assets/html/login.html
@@ -41,5 +41,18 @@
             }
         });
     </script>
+    <script>
+        // Apply theme based on system preference
+        const applySystemTheme = () => {
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+            } else {
+                document.documentElement.setAttribute('data-theme', 'light');
+            }
+        };
+
+        applySystemTheme();
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', applySystemTheme);
+    </script>
 </body>
 </html>
