--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <title>Wplan Auto</title>
     <style>
+        :root {
+            --bg-color: #f2f2f7;
+            --border-color: #d1d1d6;
+            --button-bg-color: rgb(0, 76, 255);
+            --button-hover-bg-color: rgb(0, 50, 200);
+            --text-color: black;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --bg-color: rgb(33, 44, 66);
+                --border-color: #38383a;
+                --button-bg-color: rgb(0, 76, 255);
+                --button-hover-bg-color: rgb(0, 50, 200);
+                --text-color: white;
+            }
+        }
+
         body, html {
             margin: 0;
             padding: 0;
@@ -12,11 +30,13 @@
             width: 100%;
             display: flex;
             flex-direction: column;
+            background-color: var(--bg-color);
+            color: var(--text-color);
         }
         #menu-bar {
             padding: 5px;
-            background-color: #f2f2f7;
-            border-bottom: 1px solid #d1d1d6;
+            background-color: var(--bg-color);
+            border-bottom: 1px solid var(--border-color);
             display: flex;
             gap: 5px;
             flex-shrink: 0;
@@ -26,17 +46,17 @@
             padding: 5px 10px;
             border: none;
             border-radius: 5px;
-            background-color: rgb(0, 76, 255);
+            background-color: var(--button-bg-color);
             color: white;
             font-size: 14px;
             cursor: pointer;
         }
         button:hover {
-            background-color: rgb(0, 50, 200);
+            background-color: var(--button-hover-bg-color);
         }
         #content-view {
             flex-grow: 1;
-            background-color: white; /* Фон на случай, если view не загрузится */
+            background-color: var(--bg-color); /* Фон на случай, если view не загрузится */
         }
     </style>
 </head>
@@ -54,6 +74,18 @@
         document.getElementById('logout-btn').addEventListener('click', () => {
             window.electronAPI.logout();
         });
+
+        // Apply theme based on system preference
+        const applySystemTheme = () => {
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+            } else {
+                document.documentElement.setAttribute('data-theme', 'light');
+            }
+        };
+
+        applySystemTheme();
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', applySystemTheme);
     </script>
 </body>
 </html>
