--- a/src/assets/html/settings.html
+++ b/src/assets/html/settings.html
@@ -105,6 +105,12 @@
             </label>
         </div>
         <div class="form-group">
+            <label>
+                <input type="checkbox" id="auto-end-enabled">
+                Автопосчет окончания рабочего дня
+            </label>
+        </div>
+        <div class="form-group">
             <label>Время начала (если вкл.)</label>
             <div class="time-input-group">
                 <input type="number" id="start-hour" min="0" max="23" placeholder="ЧЧ">
@@ -128,6 +134,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const autoStartCheckbox = document.getElementById('auto-start-enabled');
             const notificationsCheckbox = document.getElementById('notifications-enabled');
+            const autoEndCheckbox = document.getElementById('auto-end-enabled');
             const startHourInput = document.getElementById('start-hour');
             const startMinuteInput = document.getElementById('start-minute');
             const endHourInput = document.getElementById('end-hour');
@@ -143,7 +150,41 @@
                 endMinuteInput.value = (settings.endMinute ?? 0).toString().padStart(2, '0');
                 autoStartCheckbox.checked = settings.autoStartEnabled ?? true;
                 notificationsCheckbox.checked = settings.notificationsEnabled ?? true;
+                autoEndCheckbox.checked = settings.autoEndEnabled ?? true;
+                toggleAutoEnd(autoEndCheckbox.checked);
             });
+
+            function calculateEndTime() {
+                if (!autoEndCheckbox.checked) return;
+
+                let startHour = parseInt(startHourInput.value, 10);
+                let startMinute = parseInt(startMinuteInput.value, 10);
+
+                if (isNaN(startHour) || isNaN(startMinute)) return;
+
+                let endHour = startHour + 8;
+                if (endHour >= 24) {
+                    endHour -= 24;
+                }
+
+                endHourInput.value = endHour;
+                endMinuteInput.value = startMinute.toString().padStart(2, '0');
+            }
+
+            function toggleAutoEnd(enabled) {
+                endHourInput.disabled = enabled;
+                endMinuteInput.disabled = enabled;
+                if (enabled) {
+                    calculateEndTime();
+                }
+            }
+
+            autoEndCheckbox.addEventListener('change', () => {
+                toggleAutoEnd(autoEndCheckbox.checked);
+            });
+
+            startHourInput.addEventListener('input', calculateEndTime);
+            startMinuteInput.addEventListener('input', calculateEndTime);
 
             saveBtn.addEventListener('click', () => {
                 const settings = {
@@ -152,7 +193,8 @@
                     endHour: parseInt(endHourInput.value, 10),
                     endMinute: parseInt(endMinuteInput.value, 10),
                     autoStartEnabled: autoStartCheckbox.checked,
-                    notificationsEnabled: notificationsCheckbox.checked
+                    notificationsEnabled: notificationsCheckbox.checked,
+                    autoEndEnabled: autoEndCheckbox.checked
                 };
                 window.electronAPI.saveSettings(settings);
                 statusEl.textContent = 'Сохранено!';
